# gatekeeper

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
docs/: ARCHITECTURE.md  SIMULATOR.md  features.md
docs/planning/action-plans/: AP-005-fix-core-signal-processing.md  AP-006-source-directory-restructure-lib-alongside-src.md  AP-007-implement-fdp-016-phases-2-4.md  AP-008-gks-language-and-simulator-architecture-redesign.md
docs/planning/feature-designs/: FDP-013-firmware-size-optimization.md  FDP-014-cycle-mode-improvements.md  FDP-015-cjson-integration.md  FDP-016-simulator-fidelity-and-fault-injection.md  FDP-017-gks-language-specification-v1.5.md  FDP-018-gks-parser-architecture.md
docs/planning/reports/: RPT-001-hardware-testing-findings.md
hardware/gatekeeper/: gatekeeper.kicad_pcb  gatekeeper.kicad_prl  gatekeeper.kicad_pro  gatekeeper.kicad_sch
hardware/gatekeeper/bom/: button-gate-bom-2025-01-26.csv
hardware/gatekeeper/export/: gatekeeper-B_Cu.gbr  gatekeeper-B_Mask.gbr  gatekeeper-B_Paste.gbr  gatekeeper-B_Silkscreen.gbr  gatekeeper-Edge_Cuts.gbr  gatekeeper-F_Cu.gbr  gatekeeper-F_Mask.gbr  gatekeeper-F_Paste.gbr  gatekeeper-F_Silkscreen.gbr  gatekeeper-NPTH.drl  gatekeeper-PTH.drl  gatekeeper-drl.rpt  gatekeeper-job.gbrjob  gatekeeper.rpt
lib/events/: events.c  events.h
lib/fsm/: fsm.c  fsm.h
lib/hardware/: hal_interface.h
lib/input/: button.c  button.h  cv_input.c  cv_input.h
lib/output/: cv_output.c  cv_output.h  led_animation.c  led_animation.h  neopixel.c  neopixel.h
lib/utility/: delay.c  delay.h  progmem.h  status.h
scripts/: run_sim_tests.sh
sim/: CMakeLists.txt  command_handler.c  command_handler.h  gks.ebnf  input_source.c  input_source.h  sim_hal.c  sim_hal.h  sim_main.c  sim_state.c  sim_state.h
sim/render/: render_json.c  render_terminal.c
sim/schema/: sim_state_v1.json
sim/scripts/: adc_timeout_recovery.gks  cv_gate_chain.gks  cv_menu_passthrough.gks  cv_toggle_chain.gks  cv_trigger_chain.gks  eeprom_fault_modes.gks  hysteresis_bounds.gks  test_menu_toggle.gks
src/: app_init.c  app_init.h
src/config/: mode_config.h
src/core/: coordinator.c  coordinator.h  states.h
src/hardware/: hal.h
src/modes/: mode_handlers.h
src/output/: led_feedback.c  led_feedback.h
test/unit/: CMakeLists.txt
test/unit/app_init/: test_app_init.h
test/unit/core/: test_coordinator.h
test/unit/fsm/: test_events.h
test/unit/output/: test_led_feedback.h
